<resources>
    <string name="app_name">DNC 2</string>
    <string name="tourist_path">Turysta</string>
    <string name="oaza_path">Oaza</string>
    <string name="home_church_path">Domowy kościół</string>
    <string name="advanced_path">Zaawansowani</string>
    <string name="tourist_button">Turysta</string>
    <string name="oaza_youth_button">Młodzież z Oazy</string>
    <string name="advanced_button">Zaawansowani</string>
    <string name="help_button">Pomoc</string>
    <string name="home_church_button">Domowy Kościół</string>
    <string name="debug_db_button">DB_Debugger</string>
    <string name="download_content_button">Pobierz audio/video</string>
    <string name="title_activity_downloader">DownloaderActivity</string>
    <string name="download_text">
        Witaj! \n\nZanim będziesz mógł korzystać z aplikacju pobierz materiały multimedialne do wszystkich ścieżek - kliknij przycisk POBIERZ.\n\nPotrwa to w zależności od prędkości Twojego internetu od kilku do kilkunastu minut. Zajmą one na Twoim telefonie około 150 Mb.
    </string>
    <string name="update_text">
        Dostępna jest aktualizacja ścieżek! Aby pobrać nowe dane, kliknij AKTUALIZUJ
        Jeżeli chcesz wrócić do aplikacji kliknij POWRÓT.
    </string>
    <string name="hello_text">Witaj!</string>
    <string name="click_on_button_too_fast">Za szybko klikasz :)</string>
    <string name="no_internet_connection">Brak dostepu do internetu :-(</string>
    <string name="no_internet_connection_downloader">Brak internetu - włącz go i klinik POBIERZ</string>
    <string name="download_button">Pobierz</string>
    <string name="exit_button">Wyjdź</string>
    <string name="update_button">Aktualizuj</string>
    <string name="currently_listening">Teraz słuchasz:</string>
    <string name="back_button">Powrót</string>
    <string name="no_internet_main_view_text">Niestety nie masz dostępu do internetu! Aby korzystać z aplikacji musisz go wlączyć!</string>
    <string name="was_download_succesfull">randomStringThatWontAppear</string>
    <string name="succesfull_download_downloader">Wszystkie materiały zostały pobrane prawidłowo.</string>
    <string name="download_tourist_path">Pobieram ścieżkę: TURYSTA</string>
    <string name="download_oaza_path">Pobieram ścieżkę: MŁODZIEŻ Z OAZY</string>
    <string name="download_house_path">Pobieram ścieżkę: DOMOWY KOŚCIÓŁ</string>
    <string name="download_advanced_path">Pobieram ścieżkę: ZAAWANSOWANI</string>
    <string name="download_failed_downloader">BŁĄD!</string>
    <string name="toast_turn_internet_on_downloader">Włącz internet!</string>
    <string name="back_button_toast_on_downloader">Pobieranie, proszę czekać...</string>
    <string name="msg_token_fmt">123124</string>
    <string name="default_notification_channel_id">defaultNotificationChannelId</string>
    <string name="title_activity_main2">Main2Activity</string>
    <!--TODO dodać wartości dla wszytkich referencji-->
</resources>
