<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_activity_layout"
    tools:context="com.maciek.v2.Activities.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/tlo2"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:scaleX="0.6"
            android:scaleY="0.6"

            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_no_internet"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/no_internet_main_view_text"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/launch_downloader_button"
                android:layout_width="151dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/download_button"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <Button
                android:id="@+id/exit_app_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/exit_button"
                android:visibility="gone" />

        </LinearLayout>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        >
    <LinearLayout
        android:id="@+id/linar_layout_buttons"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingBottom="20dp"
        >

        <LinearLayout
            android:id="@+id/updateLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hello_text"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="55dp"
                android:text="@string/update_text"
                android:textColor="@color/white"
                android:textSize="16sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/accept_update_button"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="@string/update_button"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/reject_update_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="@string/back_button"
                    android:visibility="visible" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button_tourist"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button"
            android:text="@string/tourist_button"
            android:textSize="18dp"
            android:visibility="gone" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="18dp"
            android:text="@string/oaza_youth_button"
            android:id="@+id/button_oaza_youth"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:visibility="gone"
            android:layout_marginBottom="10dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="18dp"
            android:text="@string/home_church_button"
            android:id="@+id/button_home_church"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:visibility="gone"
            android:layout_marginBottom="10dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="18dp"
            android:text="@string/advanced_button"
            android:id="@+id/button_advanced"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:visibility="gone"
            android:layout_marginBottom="10dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="14sp"
            android:text="@string/help_button"
            android:id="@+id/button_help"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:visibility="gone"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>
    </ScrollView>
    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/loader"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />


</FrameLayout>
